# SYAlgorithm

./: CMakeLists.txt  Expression.h  Interpreter.cpp  Interpreter.h  README.md  Value.cpp  Value.h  Variable.cpp  Variable.h  main.cpp
BinaryOperators/: BinaryOperator.cpp  BinaryOperator.h  Div.cpp  Div.h  Minus.cpp  Minus.h  Mul.cpp  Mul.h  Plus.cpp  Plus.h
UnaryOperators/: UMinus.cpp  UMinus.h  UPlus.cpp  UPlus.h  UnaryOperator.cpp  UnaryOperator.h
